1.17.4 /
[Alexandr Topilski]

1.17.3 / April 15, 2018
[Alexandr Topilski]
- Added examples for main commands

1.17.2 / April 4, 2018
[Alexandr Topilski]
- JSONDUMP command for all databases
- Unicode view

1.17.1 / March 28, 2018
[Alexandr Topilski]
- Ban users

1.17.0 / March 27, 2018
[Alexandr Topilski]
- New trials mode

1.16.7 / March 17, 2018
[Alexandr Topilski]
- Compiler flags
- Up Openssl to 1.1.0g version

1.16.6 / March 12, 2018
[Alexandr Topilski]
- First/Last name

1.16.5 / March 8, 2018
[Alexandr Topilski]
- [Unqlite] Up sources to version 1.1.8
- Update QScintilla to version 2.10.3

1.16.4 / February 28, 2018
[Alexandr Topilski]
- Sync password remote

1.16.3 / February 17, 2018
[Alexandr Topilski]
- More compression views

1.16.2 / February 10, 2018
[Alexandr Topilski]
- Json rpc for statistic/version
- [RocksDB] LZ4 compression support
- [RocksDB] Update sources to version 5.10.0

1.16.1 / February 1, 2018
[Alexandr Topilski]
- Fix password dialog

1.16.0 / January 28, 2018
[Alexandr Topilski]
- Pika db first step integration
- [Redis] Redirect requests to cluster nodes
- [Redis] Up hiredis sources to version 0.13.3
- [Redis] Sentinel type

1.15.1 / January 17, 2018
[Alexandr Topilski]
- CONFIG GET databases
- Runtime SSH password
- [LevelDB] Compression options
- [RocksDB] Compression options
- Update external libraries

1.15.0 / January 10, 2018
[Alexandr Topilski]
- Save/Restore MainWindow position
- Save Json fixes
- [RocksDB] added support columns(database)

1.14.3 / January 2, 2018
[Alexandr Topilski]
- How to use dialog
- Bug fixes

1.14.2 / December 30, 2017
[Alexandr Topilski]
- #80 can't connect using ssh
- rebloom commands support

1.14.1 / December 21, 2017
[Alexandr Topilski]
- [Redis] SSH input checks
- Text view combobox
- Retina display support

1.14.0 / December 14, 2017
[Alexandr Topilski]
- Verify private user password
- UI fixes
- Is public version now trial

1.13.1 / December 5, 2017
[Alexandr Topilski]
- Check update fixes