@@ -1,5 +1,6 @@
 1.16.4 /
 [Alexandr Topilski]
+- Delete key hotkey
 
 1.16.3 / April 15, 2018
 [Alexandr Topilski]
